maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:31: error: not found: value m
  if (!aMurNord(x,y+1) && y>m) noteIndication(x, y+1, i+1);
                            ^ShortestPathMaze:32: error: not found: value n
  if (!aMurOuest(x+1,y) && x<n) noteIndication(x+1, y, i+1);
                             ^